(lang dune 3.15)

(name olex)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "wajdi jomaa")

(maintainers "wajdi jomaa")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name olex)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
